refactor: enhance submission handling and validation logic